# labstor

./: .gitignore  CMakeLists.txt  design_doc.txt  install.sh  preprocess.py  readme.md
benchmark/: CMakeLists.txt  commands.py  config.ini  config.py  config.yaml  test.py  test_server_thrpt.py  test_server_thrpt_manual.py
benchmark/labstor_bench/: bench_conf.py  commands.py  fio.py  rocksdb.py  ycsb.py
benchmark/labstor_bench/filebench/: test.py
benchmark/labstor_bench/io_anatomy/: test.py
benchmark/labstor_bench/iosched_blksw/: latency.fio  test.py  thrpt.fio
benchmark/labstor_bench/iosched_labstor/: test.py
benchmark/labstor_bench/live_upgrade/: test.py
benchmark/labstor_bench/md_thrpt/: test.py
benchmark/labstor_bench/precondition/: test.py
benchmark/labstor_bench/storage_api/: microbench.fio  test.py
benchmark/labstor_bench/util/: labstor.py  test.py
benchmark/labstor_bench/work_orch_cpu/: test.py
benchmark/labstor_bench/work_orch_req/: test.py
benchmark/scripts/: commands.py  config.py  test_server_thrpt.py
benchmark/src/: dummy.c
benchmark/src/fio/: labstor_mq_fio.cpp  microbench.fio  precondition.fio
benchmark/src/io_thrpt/: dax.h  io_logger.h  io_test.h  io_uring.h  labstor_bio.h  labstor_mq.h  libaio.h  posix.h  posix_aio.h  probe.cpp  rng.h  sectored_io.h  spdk.h  test.cpp  unix_file_based.h
benchmark/src/ipc_thrpt/: test_ipc_thrpt.cpp
benchmark/src/md/: metadata.cpp
benchmark/src/posix_md/: posix.cpp
benchmark/src/spdk/: hello.c
labmods/: CMakeLists.txt
labmods/blkdev_table/: CMakeLists.txt  blkdev_table.h
labmods/blkdev_table/client/: blkdev_table_client.cpp  blkdev_table_client.h
labmods/blkdev_table/kernel/: Makefile  blkdev_table_kernel.c  blkdev_table_kernel.h
labmods/blkdev_table/server/: blkdev_table_server.cpp  blkdev_table_server.h
labmods/block/: block.h
labmods/block/client/: block_client.h
labmods/block/server/: block_server.h
labmods/block_fs/: CMakeLists.txt  block_fs.h
labmods/block_fs/client/: block_fs_client.cpp  block_fs_client.h
labmods/block_fs/server/: block_fs_server.cpp  block_fs_server.h
labmods/dummy/: CMakeLists.txt  dummy.h
labmods/dummy/client/: dummy_client.cpp  dummy_client.h
labmods/dummy/server/: dummy_server.cpp  dummy_server.h
labmods/dummy/util/: register.cpp
labmods/filesystems/block_fs/: CMakeLists.txt  block_fs.h
labmods/filesystems/generic_posix/: CMakeLists.txt  generic_posix.h
labmods/filesystems/labstor_fs/: CMakeLists.txt  labstor_fs.h
labmods/generic_block/: CMakeLists.txt  generic_block.h
labmods/generic_block/client/: generic_block_client.h
labmods/generic_block/server/: generic_block_server.h
labmods/generic_posix/: CMakeLists.txt  generic_posix.h
labmods/generic_posix/client/: generic_posix_client.cpp  generic_posix_client.h  generic_posix_overload.cpp
labmods/generic_posix/lib/: posix_client.h
labmods/generic_posix/server/: generic_posix_server.cpp  generic_posix_server.h
labmods/generic_queue/: CMakeLists.txt  generic_queue.h
labmods/generic_queue/client/: generic_queue_client.h
labmods/generic_queue/server/: generic_queue_server.h
labmods/iosched/no_op/: CMakeLists.txt  no_op.h
labmods/ipc_manager/: CMakeLists.txt  ipc_manager.h
labmods/ipc_manager/kernel/: Makefile  ipc_manager_kernel.c  ipc_manager_kernel.h
labmods/ipc_manager/netlink_client/: ipc_manager_client_netlink.cpp  ipc_manager_client_netlink.h
labmods/ipc_test/: CMakeLists.txt  ipc_test.h
labmods/ipc_test/client/: ipc_test_client.cpp  ipc_test_client.h
labmods/ipc_test/kernel/: Makefile  ipc_test_kernel.c  ipc_test_kernel.h
labmods/ipc_test/server/: ipc_test_server.cpp  ipc_test_server.h
labmods/kernel/blkdev_table/: CMakeLists.txt  blkdev_table.h
labmods/kernel/ipc_manager/: CMakeLists.txt
labmods/kernel/ipc_test/: CMakeLists.txt
labmods/kernel/secure_shmem/: CMakeLists.txt
labmods/kernel/work_orchestrator/: CMakeLists.txt
labmods/labstor_fs/: CMakeLists.txt  labstor_fs.h
labmods/labstor_fs/client/: labstor_fs_client.cpp  labstor_fs_client.h
labmods/labstor_fs/lib/: block_allocator.h  labstor_fs_log.h
labmods/labstor_fs/server/: labstor_fs_server.cpp  labstor_fs_server.h
labmods/lru/: CMakeLists.txt  lru.h
labmods/lru/client/: lru_client.cpp  lru_client.h
labmods/lru/server/: lru_server.cpp  lru_server.h
labmods/mq_driver/: CMakeLists.txt  mq_driver.h
labmods/mq_driver/client/: mq_driver_client.cpp  mq_driver_client.h
labmods/mq_driver/kernel/: Makefile  mq_driver_kernel.c  mq_driver_kernel.h
labmods/mq_driver/server/: mq_driver_server.cpp  mq_driver_server.h
labmods/no_op/: CMakeLists.txt  no_op.h
labmods/no_op/client/: no_op_client.cpp  no_op_client.h
labmods/no_op/server/: no_op_server.cpp  no_op_server.h
labmods/registrar/: CMakeLists.txt  registrar.h
labmods/registrar/client/: registrar_client.cpp  registrar_client.h
labmods/registrar/server/: registrar_server.cpp  registrar_server.h
labmods/registrar/util/: terminate.cpp
labmods/secure_shmem/: CMakeLists.txt  secure_shmem.h
labmods/secure_shmem/kernel/: Makefile  secure_shmem_kernel.c  secure_shmem_kernel.h
labmods/secure_shmem/netlink_client/: secure_shmem_client_netlink.cpp  secure_shmem_client_netlink.h
labmods/spdk/: spdk.h
labmods/spdk/client/: spdk_client.cpp  spdk_client.h
labmods/spdk/lib/: dummy.cpp
labmods/spdk/util/: probe.cpp
labmods/storage_api/generic_block/: generic_block.h
labmods/storage_api/generic_queue/: generic_queue.h
labmods/storage_api/mq_driver/: CMakeLists.txt  mq_driver.h
labmods/storage_api/spdk/: spdk.h
labmods/time_keeper/kernel/: time_keeper.cpp
labmods/work_orchestrator/: CMakeLists.txt  work_orchestrator.h
labmods/work_orchestrator/kernel/: Makefile  work_orchestrator_kernel.c  work_orchestrator_kernel.h
modules/: CMakeLists.txt
modules/dummy/: CMakeLists.txt  dummy.h
modules/dummy/util/: register.cpp
modules/registrar/: CMakeLists.txt  registrar.h
test/: CMakeLists.txt
test/integration/: CMakeLists.txt  test.cpp
test/performance/: CMakeLists.txt
test/unit/: CMakeLists.txt
(+2168 files in other folders)
