cmake_minimum_required(VERSION 3.10)
project(labstor)

set(CMAKE_CXX_STANDARD 17)

#Dummy & Registration
add_executable(test_dummy_exec registrar/test.cpp)
add_dependencies(test_dummy_exec labstor_client_library dummy_client)
target_link_libraries(test_dummy_exec labstor_client_library dummy_client)

#Blkdev table client
add_executable(test_blkdev_table_exec blkdev_table/test.cpp)
add_dependencies(test_blkdev_table_exec labstor_client_library blkdev_table_client)
target_link_libraries(test_blkdev_table_exec labstor_client_library blkdev_table_client)