cmake_minimum_required(VERSION 3.10)
project(labstor)

set(CMAKE_CXX_STANDARD 17)
find_package(OpenMP)


#Dummy & Registration
add_executable(test_dummy_exec registrar/test.cpp)
add_dependencies(test_dummy_exec labstor_client_library dummy_client)
target_link_libraries(test_dummy_exec labstor_client_library dummy_client)

#IPC Test
add_executable(test_ipc_exec ipc_test/test.cpp)
add_dependencies(test_ipc_exec labstor_client_library ipc_test_client)
target_link_libraries(test_ipc_exec labstor_client_library ipc_test_client)

#Blkdev table client
add_executable(test_blkdev_table_exec blkdev_table/test.cpp)
add_dependencies(test_blkdev_table_exec labstor_client_library blkdev_table_client)
target_link_libraries(test_blkdev_table_exec labstor_client_library blkdev_table_client)

#MQ driver client
add_executable(test_mq_driver_exec mq_driver/test.cpp)
add_dependencies(test_mq_driver_exec labstor_client_library mq_driver_client blkdev_table_client)
target_link_libraries(test_mq_driver_exec labstor_client_library mq_driver_client blkdev_table_client)

#Server throughput
add_executable(test_server_conn_exec server_conn/test.cpp)
add_dependencies(test_server_conn_exec labstor_client_library ipc_test_client)
target_compile_options(test_server_conn_exec PUBLIC "${OpenMP_CXX_FLAGS}")
target_link_libraries(test_server_conn_exec labstor_client_library ipc_test_client "${OpenMP_CXX_FLAGS}")